fix: improve display of process_all on small screens

--- a/Goobi/src/main/webapp/uii/templatePG/css/src/pages/_process-all.scss
+++ b/Goobi/src/main/webapp/uii/templatePG/css/src/pages/_process-all.scss
@@ -62,8 +62,10 @@
       width: 0;
     }
     > tbody {
+      > * + * {
+        margin: 1.5rem 0 0;
+      }
       > [role="row"] {
-        border-bottom: 0;
         display: flex;
         flex-direction: column;
         &:nth-child(even) {
@@ -71,7 +73,7 @@
         }
         > td {
           border: 0;
-          border-bottom: 1px solid black;
+          border-bottom: 1px solid var(--clr-neutral-300);
           column-gap: 1rem;
           display: flex;
           justify-content: space-between;
